LRAC-13933 - Fix criteria card are with extra spacing

--- a/modules/dxp/apps/osb/osb-faro/osb-faro-web/src/main/css/_sheet.scss
+++ b/modules/dxp/apps/osb/osb-faro/osb-faro-web/src/main/css/_sheet.scss
@@ -36,4 +36,8 @@
 			margin-bottom: 0;
 		}
 	}
+
+	&:after {
+		margin-top: 0;
+	}
 }
